feat: Get rid of reflection to simplify the builds and also upgrade to Java 25 to unlock FFM.